@@ -22,6 +22,7 @@ Version 1.5 (X/X/20X)
   * "User Picture Change" menu now looks native on Leopard and newer systems. (#11964)
   * "User Picture" - image well, supports drag and drop
   * Fixed positioning of selected icon in Recent Icons not being reapplied when icon is reselected. (#9908)
+  * Added support for Blocking/Unblocking all contacts in a group. (#2177)
 
  Dock icon
   * Moved the dock badge to the top right to be consistent with other Mac OS X applications such as Mail. (#13439)
